--- a/config.global.json
+++ b/config.global.json
@@ -14,6 +14,10 @@
             "privateKeyPath": ""
         }
     },
+    "dingtalk": {
+        "enable": true,
+        "access_token": ""
+    },
     "wecom": {
         "enable": true,
         "key": ""
